Kubernetes-istio-integration/03-creating-virtualservice-external.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: springbootmongo-virtual-services
spec:
  hosts:
  - "*"
  gateways:
  - http-gateway                      # 1
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: springboot             # 2
        port:
          number: 9090
